--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                        <img src="./assets/experience.png" alt="experience icon" class="icon"/>
+                        <img src="./assets/experience.png" alt="experience icon" class="experience-icon"/>
                         <h3>Experience</h3>
                         <p>2yr+ <br/> Frontend</p>
                     </div>
                     <div class="details-container">
-                        <img src="./assets/education.png" alt="education icon" class="icon"/>
+                        <img src="./assets/education.png" alt="education icon" class="education-icon"/>
                         <h3>Education</h3>
                         <p>Bachelor of Science<br/> Memorial University of Newfoundland</p>
                     </div>
@@ -273,7 +273,7 @@
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon" />
-                <p><a href="https:/linkedin.com/in/mahinsindhwani">LinkedIn</a></p>
+                <p><a href="https://linkedin.com/in/mahinsindhwani">LinkedIn</a></p>
             </div>
         </div>
     </section>
