CSS Bug fixed and some text changes

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                 <p>Advanced</p>
                             </div>
                             <div class="tooltip-content">
-                                I learned Java in second-year university. I made a Java-based game that helped me really understand object-oriented programming and how classes and inheritance work.
+                                I learned Java in second-year university. I made a Java based game that helped me really understand object-oriented programming and how classes and inheritance work.
                             </div>
                         </article>
                         <article class="tooltip">
@@ -191,7 +191,7 @@
                                 <p>Intermediate</p>
                             </div>
                             <div class="tooltip-content">
-                                I picked up JS for a visualization project with friends. I’ve since used it in AI courses to write algorithms and in multiple frontend projects—really helped me understand event-based logic.
+                                I picked up JS for a visualization project with friends. I’ve since used it in AI courses to write algorithms and in multiple frontend projects which really helped me understand event-based logic.
                             </div>
                         </article>
                         <article class="tooltip">
@@ -221,7 +221,7 @@
                                 <p>Novice</p>
                             </div>
                             <div class="tooltip-content">
-                                Just started learning C++. It’s a little different from other languages I know, but I’m practicing by making small command-line tools to get comfortable with pointers and memory.
+                                Just started learning C++. It’s a little different from other languages I know, but I’m practicing by making small commandline tools to get comfortable with pointers and memory.
                             </div>
                         </article>
                     </div>
@@ -256,7 +256,7 @@
                                 <p>Advanced</p>
                             </div>
                             <div class="tooltip-content">
-                                Trello helps me stay on track with to-dos. I used it a lot during group projects and my internship to organize work and manage team progress.
+                                Trello helps me stay on track with todos. I used it a lot during group projects and my internship to organize work and manage team progress.
                             </div>
                         </article>
                         <article class="tooltip">
@@ -323,7 +323,9 @@
                         <div class="project-card-back">
                             <!-- <h3>Details</h3> -->
                             <p>
-                                Built this with friends to help students see computer science concepts instead of just reading about them. We used React and React Flow to create interactive visualizations for things like sorting algorithms and data structures. It’s like turning abstract CS topics into something you can actually play with.
+                                I Co-developed this project with friends to help students see computer science concepts instead of just reading about them. 
+                                I used React and React Flow to create interactive visualizations. 
+                                It turns abstract CS topics into something you can actually play with.
                             </p>
                             <div class="btn-container">
                                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani'">
@@ -347,7 +349,9 @@
                         <div class="project-card-back">
                             <!-- <h3>Project One Details</h3> -->
                             <p>
-                                This is my personal portfolio site where I showcase my projects and skills. Built it from scratch using HTML, CSS, and JavaScript, and deployed it with Git. It's a clean, responsive design that reflects my journey and growth as a developer.
+                                This is my personal portfolio site where I showcase my projects and skills. 
+                                I Built it from scratch using HTML, CSS, and JavaScript, and deployed it with Git. 
+                                It's a clean, responsive design that reflects my journey and growth as a developer.
                             </p>
                             <div class="btn-container">
                                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani'">
@@ -371,7 +375,9 @@
                         <div class="project-card-back">
                             <!-- <h3>Project One Details</h3> -->
                             <p>
-                                Developed a Connect Four game as a group project for a university course. We used Java to build the game logic and GUI, practicing teamwork, version control with Git, and adhering to software development best practices. It was a great experience in collaborative coding and project management.
+                                I Co-developed a block game as a group project for a university course. 
+                                We used Java to build the game logic and GUI, practicing teamwork, version control with Git, 
+                                and adhering to software development best practices. It was a great experience in collaborative coding and project management.
                             </p>
                             <div class="btn-container">
                                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani'">
