--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section id="profile">
         <video autoplay muted loop playsinline autoplay preload="auto" class="bg-video">
-            <source src="./assets/spinningCode.webm" type="video/mp4" />
+            <source src="./assets/spinningCode.mp4" type="video/mp4" />
             'Your browser does not support this background sorry :('
         </video>
         <div class="section__pic-container">
