Final Version (without feedback)

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     </nav>
 
     <section id="profile">
-        <video autoplay muted loop playsinline autoplay preload="auto" class="bg-video">
+        <video autoplay muted loop playsinline preload="auto" class="bg-video">
             <source src="./assets/spinningCode.mp4" type="video/mp4" />
             'Your browser does not support this background sorry :('
         </video>
         <div class="section__pic-container">
-            <img src="./assets/PortfolioPic.jpg" alt="profile picture"/>
+            <img src="./assets/PortfolioPic.webp" alt="profile picture"/>
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello I'm</p>
@@ -66,8 +66,8 @@
                 <button class="btn btn-color-1" onclick="location.href='#contact'">Contact Me</button>
             </div>
             <div id="socials-container">
-                <img src="./assets/linkedin.png" alt="LinkedIn Profile" class="icon" onclick="location.href='https://linkedin.com/in/mahinsindhwani'" />
-                <img src="./assets/github.png" alt="Github Profile" class="icon" onclick="location.href='https://github.com/MahinSindhwani'" />
+                <img src="./assets/linkedin.webp" alt="LinkedIn Profile" class="icon" onclick="location.href='https://linkedin.com/in/mahinsindhwani'" />
+                <img src="./assets/github.webp" alt="Github Profile" class="icon" onclick="location.href='https://github.com/MahinSindhwani'" />
             </div>
         </div>
     </section>
@@ -77,7 +77,7 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/MahinPicOption1.jpeg" alt="profile pic" class="about-pic"/>
+                <img src="./assets/MahinPicOption1.webp" alt="profile pic" class="about-pic"/>
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
@@ -85,7 +85,7 @@
                         <div class="card-inner">
                           <div class="card-front">
                             <div class="details-container">
-                                <img src="./assets/experience.png" alt="experience icon" class="experience-icon" />
+                                <img src="./assets/experience.webp" alt="experience icon" class="experience-icon" />
                                 <h3>Experience</h3>
                                 <p>3rd Year<br /> CS Student</p>
                             </div>
@@ -106,7 +106,7 @@
                         <div class="card-inner">
                           <div class="card-front">
                             <div class="details-container">
-                                <img src="./assets/education.png" alt="education icon" class="education-icon" />
+                                <img src="./assets/education.webp" alt="education icon" class="education-icon" />
                                 <h3>Education</h3>
                                 <p>Bachelor of Science<br /> Memorial University of Newfoundland</p>
                             </div>
@@ -116,7 +116,7 @@
                                 <h3>Highlights</h3>
                                 <p>
                                     • CS Major<br />
-                                    • GPA: 3.92 (Avg: 89.7%)<br />
+                                    • GPA: 3.92 (CS Avg: 92%)<br />
                                     • $4000 Entrance Scholarship
                                 </p>
                             </div>
@@ -143,7 +143,7 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#experience'" />
+        <img src="./assets/arrow.webp" alt="arrow icon" class="icon arrow" onclick="location.href='#experience'" />
     </section>
 
     <section id="experience" class="fade-in-section">
@@ -155,17 +155,17 @@
                     <h2 class="experience-sub-title">Languages</h2>
                     <div class="article-container">
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>Python</h3>
                                 <p>Advanced</p>
                             </div>
                             <div class="tooltip-content">
-                                Python is what got me into coding. I started with tiny projects and LeetCode, which made me more confident. I now even teach Python to students at university as a PAL leader.
+                                Python is what got me into coding. I started with tiny projects and LeetCode, which made me more confident. I now help students with Python at university as a PAL leader.
                             </div>
                         </article>
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>Java</h3>
                                 <p>Advanced</p>
@@ -175,7 +175,7 @@
                             </div>
                         </article>
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>HTML</h3>
                                 <p>Advanced</p>
@@ -185,7 +185,7 @@
                             </div>
                         </article>
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>JavaScript</h3>
                                 <p>Intermediate</p>
@@ -195,7 +195,7 @@
                             </div>
                         </article>
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>CSS</h3>
                                 <p>Novice</p>
@@ -204,8 +204,8 @@
                                 I started using CSS seriously during my internship. I’ve been learning how to build clean, responsive UIs and it’s helping me polish all my web projects.
                             </div>
                         </article>
-                        <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                        <!-- <article class="tooltip">
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>React</h3>
                                 <p>Novice</p>
@@ -213,9 +213,9 @@
                             <div class="tooltip-content">
                                 I got into React during my internship. I love how everything feels so structured and fast. I’m currently learning more and planning to convert this website to React soon.
                             </div>
-                        </article>
+                        </article> -->
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>C++</h3>
                                 <p>Novice</p>
@@ -230,7 +230,7 @@
                     <h2 class="experience-sub-title">Tools</h2>
                     <div class="article-container">
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>Git</h3>
                                 <p>Advanced</p>
@@ -240,7 +240,7 @@
                             </div>
                         </article>
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>VS Code</h3>
                                 <p>Advanced</p>
@@ -250,7 +250,7 @@
                             </div>
                         </article>
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>Trello</h3>
                                 <p>Advanced</p>
@@ -260,7 +260,7 @@
                             </div>
                         </article>
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>Notion</h3>
                                 <p>Advanced</p>
@@ -270,7 +270,7 @@
                             </div>
                         </article>
                         <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>Vite</h3>
                                 <p>Novice</p>
@@ -303,7 +303,7 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#projects'" />
+        <img src="./assets/arrow.webp" alt="arrow icon" class="icon arrow" onclick="location.href='#projects'" />
     </section>
 
     <section id="projects" class="fade-in-section">
@@ -315,7 +315,7 @@
                     <div class="project-card-inner">
                         <div class="project-card-front">
                             <div class="article-container">
-                                <img src="./assets/project1.png" alt="project 1" class="project-img"/>
+                                <img src="./assets/project1.webp" alt="project 1" class="project-img"/>
                             </div>
                             <!-- <img src="./assets/IntuitiveCS.png" alt="CS" class="project-img"> -->
                             <h2 class="experience-sub-title project-title">Intuitive CS</h2>
@@ -323,15 +323,15 @@
                         <div class="project-card-back">
                             <!-- <h3>Details</h3> -->
                             <p>
-                                I Co-developed this project with friends to help students see computer science concepts instead of just reading about them. 
+                                I co-developed this project with friends to help students see computer science concepts instead of just reading about them. 
                                 I used React and React Flow to create interactive visualizations. 
                                 It turns abstract CS topics into something you can actually play with.
                             </p>
                             <div class="btn-container">
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Intuitive-CS-Organisation/IntuitiveCS'">
                                     Github
                                 </button>
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://intuitivecs.ca'">
                                     Live demo
                                 </button>
                             </div>
@@ -342,7 +342,7 @@
                     <div class="project-card-inner">
                         <div class="project-card-front">
                             <div class="article-container">
-                                <img src="./assets/project2.png" alt="project 2" class="project-img"/>
+                                <img src="./assets/project2.webp" alt="project 2" class="project-img"/>
                             </div>
                             <h2 class="experience-sub-title project-title">Portfolio Website</h2>
                         </div>
@@ -354,10 +354,10 @@
                                 It's a clean, responsive design that reflects my journey and growth as a developer.
                             </p>
                             <div class="btn-container">
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/PersonalPortfolio'">
                                     Github
                                 </button>
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://mahinsindhwani.netlify.app'">
                                     Live demo
                                 </button>
                             </div>
@@ -368,7 +368,7 @@
                     <div class="project-card-inner">
                         <div class="project-card-front">
                             <div class="article-container">
-                                <img src="./assets/Project3.png" alt="project 3" class="project-img"/>
+                                <img src="./assets/Project3.webp" alt="project 3" class="project-img"/>
                             </div>
                             <h2 class="experience-sub-title project-title">Game of Four</h2>
                         </div>
@@ -380,10 +380,10 @@
                                 and adhering to software development best practices. It was a great experience in collaborative coding and project management.
                             </p>
                             <div class="btn-container">
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/Game-of-Four'">
                                     Github
                                 </button>
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/Game-of-Four'">
                                     Live demo
                                 </button>
                             </div>
@@ -418,7 +418,7 @@
                 </div> -->
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#contact'" />
+        <img src="./assets/arrow.webp" alt="arrow icon" class="icon arrow" onclick="location.href='#contact'" />
     </section>
 
     <section id="contact" class="fade-in-section">
@@ -426,11 +426,11 @@
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
-                <img src="./assets/email.png" alt="email icon" class="icon contact-icon email-icon" />
+                <img src="./assets/email.webp" alt="email icon" class="icon contact-icon email-icon" />
                 <p><a href="mailto:msindhwani@mun.ca">msindhwani@mun.ca</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon" />
+                <img src="./assets/linkedin.webp" alt="linkedin icon" class="icon contact-icon" />
                 <p><a href="https://linkedin.com/in/mahinsindhwani">LinkedIn</a></p>
             </div>
         </div>
@@ -440,6 +440,7 @@
         <nav>
             <div class="nav-links-container">
                 <ul class="nav-links">
+                    <li> <a href="#top">Home</a> </li>
                     <li> <a href="#about">About Me</a> </li>
                     <li> <a href="#experience">Experience</a> </li>
                     <li> <a href="#projects">Projects</a> </li>
