Optimised video, and some text

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
     <section id="profile">
         <video autoplay muted loop playsinline preload="auto" class="bg-video">
-            <source src="./assets/spinningCode.mp4" type="video/mp4" />
+            <source src="./assets/Spinningcode_opt.mp4" type="video/mp4" />
             'Your browser does not support this background sorry :('
         </video>
         <div class="section__pic-container">
             <img src="./assets/PortfolioPic.webp" alt="profile picture"/>
         </div>
         <div class="section__text">
-            <p class="section__text__p1">Hello I'm</p>
+            <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title matrix-text" data-text="Mahin Sindhwani">Mahin Sindhwani</h1>
             <!-- <p class="section__text__p2">Frontend Developer</p> -->
             <p class="section__text__p2">
@@ -138,7 +138,7 @@
                         with Python, helping students and sharing my enthusiasm and passion with them. I interned at Embrays 
                         Technologies, where I worked with a professional tech team and saw how powerful great teamwork and 
                         passion can be. I learned a lot from that experience, and it made me excited to keep working in team 
-                        environments like that.
+                        environments similar to that.
                     </p>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                                 <p>Advanced</p>
                             </div>
                             <div class="tooltip-content">
-                                Python is what got me into coding. I started with tiny projects and LeetCode, which made me more confident. I now help students with Python at university as a PAL leader.
+                                Python is what got me into coding. I started with tiny projects and LeetCode, which made me more confident. I now help students with Python at my university as a PAL leader.
                             </div>
                         </article>
                         <article class="tooltip">
@@ -171,7 +171,7 @@
                                 <p>Advanced</p>
                             </div>
                             <div class="tooltip-content">
-                                I learned Java in second-year university. I made a Java based game that helped me really understand object-oriented programming and how classes and inheritance work.
+                                I learned Java in my second-year of university. I made a Java based game that helped me fully grasp and understand object-oriented programming and how classes and inheritance work.
                             </div>
                         </article>
                         <article class="tooltip">
@@ -181,7 +181,7 @@
                                 <p>Advanced</p>
                             </div>
                             <div class="tooltip-content">
-                                HTML was the first language I ever used, back in school. Now I use it to build full websites like this one and my team's IntuitiveCS platform.
+                                I was introduced to HTML in the 9th grade. Now I use it in many projects I've done, just like this one and my team's IntuitiveCS platform.
                             </div>
                         </article>
                         <article class="tooltip">
@@ -191,7 +191,7 @@
                                 <p>Intermediate</p>
                             </div>
                             <div class="tooltip-content">
-                                I picked up JS for a visualization project with friends. I’ve since used it in AI courses to write algorithms and in multiple frontend projects which really helped me understand event-based logic.
+                                I picked up JavaScript for a visualization project. I’ve since used it in AI courses to write algorithms, and in multiple frontend projects. This has really helped me understand event-based logic.
                             </div>
                         </article>
                         <article class="tooltip">
@@ -201,7 +201,7 @@
                                 <p>Novice</p>
                             </div>
                             <div class="tooltip-content">
-                                I started using CSS seriously during my internship. I’ve been learning how to build clean, responsive UIs and it’s helping me polish all my web projects.
+                                I started using CSS seriously during my internship. I’ve been learning how to build clean, responsive UIs, which has significantly improved my CSS skills through practical use in my web projects. 
                             </div>
                         </article>
                         <!-- <article class="tooltip">
@@ -221,7 +221,7 @@
                                 <p>Novice</p>
                             </div>
                             <div class="tooltip-content">
-                                Just started learning C++. It’s a little different from other languages I know, but I’m practicing by making small commandline tools to get comfortable with pointers and memory.
+                                I just started learning C++. It’s a little different from the other languages that I know, but I’m practicing by making small commandline tools in order to get comfortable with pointers and memory.
                             </div>
                         </article>
                     </div>
@@ -236,7 +236,7 @@
                                 <p>Advanced</p>
                             </div>
                             <div class="tooltip-content">
-                                I use Git for basically every project now: university assignments, group work, and during my internship. It's become second nature for me to branch, commit, and resolve conflicts.
+                                I use Git for basically every project now, like university assignments, group work, and during my internship. It's become second nature for me to branch, commit, and resolve conflicts.
                             </div>
                         </article>
                         <article class="tooltip">
