--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                         <div class="project-card-back">
                             <!-- <h3>Project One Details</h3> -->
                             <p>
-                                I Co-developed a block game as a group project for a university course. 
+                                I co-developed a block game as a group project for a university course. 
                                 We used Java to build the game logic and GUI, practicing teamwork, version control with Git, 
                                 and adhering to software development best practices. It was a great experience in collaborative coding and project management.
                             </p>
