--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         computer science. I love the creative freedom CS gives; being able to build whatever you imagine 
                         is an amazing feeling. I’m always exploring new software and technologies, and I genuinely enjoy 
                         learning just for the fun of it. I’d love to make games in the future, and right now I’m learning 
-                        C++ while working on a few personal projects. I pay a lot of attention to detail and recently got 
+                        C++ while working on a few personal projects. I recently got 
                         into reinforcement learning; I’m currently working on a project that uses it in a game setting. 
                         I also love teaching what I learn. I work as a PAL leader for Calculus 3 and Introduction to Programming 
                         with Python, helping students and sharing my enthusiasm and passion with them. I interned at Embrays 
